--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ rocket = "0.4.2"
 rusqlite = "0.20.0"
 whirlpool = "0.8.1"
 base64 = "0.11.0"
-sha3 = "0.8.2"
+simplelog = "0.7.4"
 medallion = "2.3.1"
+log = "0.4.8"
 serde = { version = "1.0", features = ["derive"] }
 
 [dependencies.rocket_contrib]
