--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ whirlpool = "0.8.1"
 base64 = "0.11.0"
 simplelog = "0.7.4"
 medallion = "2.3.1"
+chrono = "0.4.9"
 log = "0.4.8"
 serde = { version = "1.0", features = ["derive"] }
 
