--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.2"
-rusqlite = "0.20.0"
 whirlpool = "0.8.1"
 base64 = "0.11.0"
 simplelog = "0.7.4"
@@ -16,6 +15,7 @@ medallion = "2.3.1"
 chrono = "0.4.9"
 log = "0.4.8"
 serde = { version = "1.0", features = ["derive"] }
+diesel = { version = "1.0.0", features = ["postgres"] }
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
