--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,14 @@ edition = "2018"
 rocket = "0.4.2"
 whirlpool = "0.8.1"
 base64 = "0.11.0"
-simplelog = "0.7.4"
 medallion = "2.3.1"
 chrono = "0.4.9"
 log = "0.4.8"
+failure = "0.1.6"
 serde = { version = "1.0", features = ["derive"] }
 diesel = { version = "1.0.0", features = ["postgres"] }
+
+dotenv = "0.9.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
