--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ dotenv = "0.9.0"
 [dependencies.rocket_contrib]
 version = "0.4.2"
 default-features = false
-features = ["handlebars_templates","serve"]
+features = ["tera_templates","serve"]
