--- a/crates/routes/Cargo.toml
+++ b/crates/routes/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
-name = "bowtie"
+name = "bowtie_routes"
 version = "0.1.0"
 authors = ["Michael House <mjhouse@protonmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 rocket = "0.4.2"
-dotenv = "0.9.0"
-bowtie_routes = { path = "crates/routes" }
+diesel = { version = "1.0.0", features = ["postgres"] }
+
+bowtie_models = { path = "../models" }
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
 default-features = false
-features = ["serve"]
+features = ["tera_templates","serve"]
