--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 [dependencies]
 rocket = "0.4.2"
 dotenv = "0.9.0"
+
 bowtie_routes = { path = "crates/routes" }
+bowtie_models = { path = "crates/models" }
+
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
