--- a/crates/models/Cargo.toml
+++ b/crates/models/Cargo.toml
@@ -10,6 +10,7 @@ whirlpool = "0.8.1"
 base64 = "0.11.0"
 log = "0.4.8"
 failure = "0.1.6"
+failure_derive = "0.1.6"
 chrono = { version = "0.4.9", features = ["serde"] }
 paste = "0.1.6"
 medallion = "2.3.1"
