--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 rocket = "0.4.2"
 dotenv = "0.9.0"
 
-bowtie_routes = { path = "crates/routes" }
+bowtie_data   = { path = "crates/data" }
 bowtie_models = { path = "crates/models" }
-
+bowtie_routes = { path = "crates/routes" }
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
 default-features = false
-features = ["serve"]
+features = ["serve","diesel_postgres_pool"]
