--- a/crates/data/Cargo.toml
+++ b/crates/data/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.2"
+r2d2 = "0.8.7"
+r2d2-diesel = "1.0.0"
 diesel = { version = "1.0.0", features = ["postgres"] }
